# agenda-engenharia-de-software

./: pyproject.toml  requirements.txt
app/: __init__.py  extentions.py  factory.py
app/controllers/: agenda_controller.py
app/interfaces/: IAgenda.py  Icontato.py
app/models/: agenda.py  agenta_map.py  contato.py
app/routes/: agenda_routes.py
app/schemas/: contato_schema.py
instance/: database.db
migrations/versions/: adefc67110ec_add_agenda.py
tests/: config_test.py  conftest.py
tests/unit/: helpers.py  test_user_routes.py
